--- a/src/frontend/apps/main/src/app/global.scss
+++ b/src/frontend/apps/main/src/app/global.scss
@@ -6,22 +6,18 @@ body {
     background-color: rgb(250, 250, 250);
 }
 
-* {
-    box-sizing: border-box;
-}
-
 
 .suite__app {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    //display: flex;
+    //flex-direction: column;
+    //min-height: 100vh;
 }
 
 main {
-    display: flex;
-    flex-direction: row;
-    flex: 1 1 0%;
-    padding-bottom: 10rem;
+    //display: flex;
+    //flex-direction: row;
+    //flex: 1 1 0%;
+    //padding-bottom: 10rem;
 }
 
 .container {
