--- a/src/frontend/apps/main/src/cunningham/cunningham-tokens.css
+++ b/src/frontend/apps/main/src/cunningham/cunningham-tokens.css
@@ -162,6 +162,7 @@
 	--c--components--forms-textarea--color: var(--c--theme--colors--primary-500);
 	--c--components--forms-textarea--disabled--border-color-hover: var(--c--theme--colors--greyscale-200);
 	--c--components--modal--background-color: #ffffff;
+	--c--components--modal--backdrop-color: #0c1a2b52;
 	--c--components--button--border-radius--active: var(--c--components--button--border-radius);
 	--c--components--button--medium-height: auto;
 	--c--components--button--small-height: auto;
