--- a/src/frontend/apps/main/src/app/global.scss
+++ b/src/frontend/apps/main/src/app/global.scss
@@ -6,6 +6,11 @@ body {
     background-color: rgb(250, 250, 250);
 }
 
+p {
+    padding: 0;
+    margin: 0;
+}
+
 
 .suite__app {
     //display: flex;
