--- a/src/frontend/apps/main/src/components/Explorer/Explorer.scss
+++ b/src/frontend/apps/main/src/components/Explorer/Explorer.scss
@@ -19,14 +19,24 @@
     width: 420px;
   }
 
+  &__content {
+    /* It allows to avoid having items hidden behind footer by providing scroll space */
+    padding-bottom: 96px;
+  }
+
   &__footer {
     display: flex;
     justify-content: space-between;
-    padding: 0 24px;
+    align-items: center;
+    padding: 24px;
     position: fixed;
-    top: 780px;
+    top: calc(100vh);
+    transform: translateY(-100%);
     left: 0;
     right: 0;
+    border-top: 1px var(--c--theme--colors--greyscale-300) solid;
+    background-color: white;
+
 
     &__actions {
       display: flex;
@@ -35,7 +45,8 @@
   }
 
   .c__breadcrumbs {
-    padding: 0 0 16px 12px;
+    padding: 0 0 0 12px;
+    margin-bottom: 4px;
   }
 
   .c__datagrid__table__container > table {
