--- a/src/frontend/apps/main/src/cunningham/cunningham-custom-tokens.css
+++ b/src/frontend/apps/main/src/cunningham/cunningham-custom-tokens.css
@@ -1,16 +1,16 @@
 :root {
-  /**
-  * Input
-  */
-  --c--components--forms-input--border-radius--hover: var(
-    --c--components--forms-input--border-radius
-  );
-  --c--components--forms-input--border-radius--focus: var(
-    --c--components--forms-input--border-radius
-  );
-  --c--components--forms-input--border-color--hover: var(
-    --c--components--forms-input--border-color
-  );
+  /*!***/
+  /** Input*/
+  /**!*/
+  /*--c--components--forms-input--border-radius--hover: var(*/
+  /*  --c--components--forms-input--border-radius*/
+  /*);*/
+  /*--c--components--forms-input--border-radius--focus: var(*/
+  /*  --c--components--forms-input--border-radius*/
+  /*);*/
+  /*--c--components--forms-input--border-color--hover: var(*/
+  /*  --c--components--forms-input--border-color*/
+  /*);*/
 
   /**
   * Datepicker
