--- a/src/frontend/apps/main/src/cunningham/cunningham-tokens.css
+++ b/src/frontend/apps/main/src/cunningham/cunningham-tokens.css
@@ -29,7 +29,7 @@
 	--c--theme--colors--greyscale-800: #303C4B;
 	--c--theme--colors--greyscale-900: #0C1A2B;
 	--c--theme--colors--greyscale-000: #FFFFFF;
-	--c--theme--colors--primary-100: #EDF5FA;
+	--c--theme--colors--primary-100: #EBF2FC;
 	--c--theme--colors--primary-200: #8CB5EA;
 	--c--theme--colors--primary-300: #5894E1;
 	--c--theme--colors--primary-400: #377FDB;
@@ -69,10 +69,6 @@
 	--c--theme--colors--success-text: var(--c--theme--colors--greyscale-000);
 	--c--theme--colors--warning-text: var(--c--theme--colors--greyscale-000);
 	--c--theme--colors--danger-text: var(--c--theme--colors--greyscale-000);
-	--c--theme--colors--card-border: #ededed;
-	--c--theme--colors--primary-bg: #FAFAFA;
-	--c--theme--colors--primary-150: #E5EEFA;
-	--c--theme--colors--info-150: #E5EEFA;
 	--c--theme--font--sizes--h1: 2.2rem;
 	--c--theme--font--sizes--h2: 1.7rem;
 	--c--theme--font--sizes--h3: 1.37rem;
@@ -125,73 +121,6 @@
 	--c--theme--breakpoints--xl: 1200px;
 	--c--theme--breakpoints--xxl: 1400px;
 	--c--theme--breakpoints--xxs: 320px;
-	--c--components--datagrid--header--weight: var(--c--theme--font--weights--extrabold);
-	--c--components--datagrid--header--size: var(--c--theme--font--sizes--ml);
-	--c--components--datagrid--cell--color: var(--c--theme--colors--primary-500);
-	--c--components--datagrid--cell--size: var(--c--theme--font--sizes--ml);
-	--c--components--forms-checkbox--background-color--hover: #055fd214;
-	--c--components--forms-checkbox--color: var(--c--theme--colors--primary-500);
-	--c--components--forms-checkbox--font-size: var(--c--theme--font--sizes--ml);
-	--c--components--forms-datepicker--border-color: var(--c--theme--colors--primary-500);
-	--c--components--forms-datepicker--value-color: var(--c--theme--colors--primary-500);
-	--c--components--forms-datepicker--border-radius--hover: var(--c--components--forms-datepicker--border-radius);
-	--c--components--forms-datepicker--border-radius--focus: var(--c--components--forms-datepicker--border-radius);
-	--c--components--forms-field--color: var(--c--theme--colors--primary-500);
-	--c--components--forms-field--value-color: var(--c--theme--colors--primary-500);
-	--c--components--forms-field--width: auto;
-	--c--components--forms-input--value-color: var(--c--theme--colors--primary-500);
-	--c--components--forms-input--border-color: var(--c--theme--colors--primary-500);
-	--c--components--forms-input--color--error: var(--c--theme--colors--danger-500);
-	--c--components--forms-input--color--error-hover: var(--c--theme--colors--danger-500);
-	--c--components--forms-input--color--box-shadow-error-hover: var(--c--theme--colors--danger-500);
-	--c--components--forms-labelledbox--label-color--small: var(--c--theme--colors--primary-500);
-	--c--components--forms-labelledbox--label-color--small-disabled: var(--c--theme--colors--greyscale-400);
-	--c--components--forms-labelledbox--label-color--big--disabled: var(--c--theme--colors--greyscale-400);
-	--c--components--forms-select--border-color: var(--c--theme--colors--primary-500);
-	--c--components--forms-select--border-color-disabled-hover: var(--c--theme--colors--greyscale-200);
-	--c--components--forms-select--border-radius--hover: var(--c--components--forms-select--border-radius);
-	--c--components--forms-select--border-radius--focus: var(--c--components--forms-select--border-radius);
-	--c--components--forms-select--font-size: var(--c--theme--font--sizes--ml);
-	--c--components--forms-select--menu-background-color: #ffffff;
-	--c--components--forms-select--item-background-color--hover: var(--c--theme--colors--primary-300);
-	--c--components--forms-switch--accent-color: var(--c--theme--colors--primary-400);
-	--c--components--forms-textarea--border-color: var(--c--components--forms-textarea--border-color);
-	--c--components--forms-textarea--border-color-hover: var(--c--components--forms-textarea--border-color);
-	--c--components--forms-textarea--border-radius--hover: var(--c--components--forms-textarea--border-radius);
-	--c--components--forms-textarea--border-radius--focus: var(--c--components--forms-textarea--border-radius);
-	--c--components--forms-textarea--color: var(--c--theme--colors--primary-500);
-	--c--components--forms-textarea--disabled--border-color-hover: var(--c--theme--colors--greyscale-200);
-	--c--components--modal--background-color: #ffffff;
-	--c--components--modal--backdrop-color: #0c1a2b52;
-	--c--components--button--border-radius--active: var(--c--components--button--border-radius);
-	--c--components--button--medium-height: auto;
-	--c--components--button--small-height: auto;
-	--c--components--button--success--color: white;
-	--c--components--button--success--color-disabled: white;
-	--c--components--button--success--color-hover: white;
-	--c--components--button--success--background--color: var(--c--theme--colors--success-600);
-	--c--components--button--success--background--color-disabled: var(--c--theme--colors--greyscale-300);
-	--c--components--button--success--background--color-hover: var(--c--theme--colors--success-800);
-	--c--components--button--danger--color-hover: white;
-	--c--components--button--danger--background--color: var(--c--theme--colors--danger-400);
-	--c--components--button--danger--background--color-hover: var(--c--theme--colors--danger-500);
-	--c--components--button--danger--background--color-disabled: var(--c--theme--colors--danger-100);
-	--c--components--button--primary--color: var(--c--theme--colors--primary-text);
-	--c--components--button--primary--color-active: var(--c--theme--colors--primary-text);
-	--c--components--button--primary--background--color: var(--c--theme--colors--primary-400);
-	--c--components--button--primary--background--color-active: var(--c--theme--colors--primary-500);
-	--c--components--button--primary--border--color-active: transparent;
-	--c--components--button--secondary--color: var(--c--theme--colors--primary-500);
-	--c--components--button--secondary--color-hover: var(--c--theme--colors--primary-text);
-	--c--components--button--secondary--background--color: white;
-	--c--components--button--secondary--background--color-hover: var(--c--theme--colors--primary-700);
-	--c--components--button--secondary--border--color: var(--c--theme--colors--primary-200);
-	--c--components--button--tertiary--color: var(--c--theme--colors--primary-text);
-	--c--components--button--tertiary--color-disabled: var(--c--theme--colors--greyscale-600);
-	--c--components--button--tertiary--background--color-hover: var(--c--theme--colors--primary-100);
-	--c--components--button--tertiary--background--color-disabled: var(--c--theme--colors--greyscale-200);
-	--c--components--button--disabled--color: white;
-	--c--components--button--disabled--background--color: #b3cef0;
 }
 .cunningham-theme--dark{
 	--c--theme--colors--greyscale-100: #182536;
@@ -242,8 +171,6 @@
 	--c--theme--colors--danger-900: #9D6666;
 }
 .cunningham-theme--dsfr{
-	--c--theme--colors--card-border: #ededed;
-	--c--theme--colors--primary-text: #000091;
 	--c--theme--colors--primary-100: #f5f5fe;
 	--c--theme--colors--primary-150: #F4F4FD;
 	--c--theme--colors--primary-200: #ececfe;
@@ -254,7 +181,6 @@
 	--c--theme--colors--primary-700: #272747;
 	--c--theme--colors--primary-800: #21213f;
 	--c--theme--colors--primary-900: #1c1a36;
-	--c--theme--colors--secondary-text: #FFFFFF;
 	--c--theme--colors--secondary-100: #fee9ea;
 	--c--theme--colors--secondary-200: #fedfdf;
 	--c--theme--colors--secondary-300: #fdbfbf;
@@ -264,7 +190,6 @@
 	--c--theme--colors--secondary-700: #3b2424;
 	--c--theme--colors--secondary-800: #341f1f;
 	--c--theme--colors--secondary-900: #2b1919;
-	--c--theme--colors--greyscale-text: #303C4B;
 	--c--theme--colors--greyscale-000: #ffffff;
 	--c--theme--colors--greyscale-100: #eeeeee;
 	--c--theme--colors--greyscale-200: #e5e5e5;
@@ -320,8 +245,8 @@
 	--c--components--alert--border-radius: 0;
 	--c--components--alert--background-color: var(--c--theme--colors--greyscale-000);
 	--c--components--button--medium-height: 48px;
-	--c--components--button--border-radius: 4px;
-	--c--components--button--primary--background--color: var(--c--theme--colors--primary-text);
+	--c--components--button--border-radius: 0;
+	--c--components--button--primary--background--color: var(--c--theme--colors--primary-600);
 	--c--components--button--primary--background--color-hover: #1212ff;
 	--c--components--button--primary--background--color-active: #2323ff;
 	--c--components--button--primary--color: #ffffff;
@@ -334,36 +259,40 @@
 	--c--components--button--secondary--background--color-active: #EDEDED;
 	--c--components--button--secondary--border--color: var(--c--theme--colors--primary-600);
 	--c--components--button--secondary--border--color-hover: var(--c--theme--colors--primary-600);
-	--c--components--button--secondary--color: var(--c--theme--colors--primary-text);
+	--c--components--button--secondary--color: var(--c--theme--colors--primary-600);
 	--c--components--button--tertiary-text--background--color-hover: var(--c--theme--colors--primary-100);
 	--c--components--button--tertiary-text--color-hover: var(--c--theme--colors--primary-text);
-	--c--components--datagrid--header--color: var(--c--theme--colors--primary-text);
+	--c--components--datagrid--header--color: var(--c--theme--colors--primary-600);
 	--c--components--datagrid--header--size: var(--c--theme--font--sizes--s);
 	--c--components--datagrid--body--background-color: transparent;
 	--c--components--datagrid--body--background-color-hover: #F4F4FD;
 	--c--components--datagrid--pagination--background-color: transparent;
 	--c--components--datagrid--pagination--background-color-active: var(--c--theme--colors--primary-300);
-	--c--components--forms-checkbox--border-radius: 0;
-	--c--components--forms-checkbox--color: var(--c--theme--colors--primary-text);
 	--c--components--forms-datepicker--border-radius: 0;
 	--c--components--forms-fileuploader--border-radius: 0;
-	--c--components--forms-field--color: var(--c--theme--colors--primary-text);
-	--c--components--forms-input--border-radius: 4px;
-	--c--components--forms-input--background-color: #ffffff;
-	--c--components--forms-input--border-color: var(--c--theme--colors--primary-text);
-	--c--components--forms-input--box-shadow-color: var(--c--theme--colors--primary-text);
-	--c--components--forms-input--value-color: var(--c--theme--colors--primary-text);
-	--c--components--forms-labelledbox--label-color--big: var(--c--theme--colors--primary-text);
-	--c--components--forms-select--border-radius: 4px;
-	--c--components--forms-select--border-radius-hover: 4px;
-	--c--components--forms-select--background-color: #ffffff;
-	--c--components--forms-select--border-color: var(--c--theme--colors--primary-text);
-	--c--components--forms-select--border-color-hover: var(--c--theme--colors--primary-text);
-	--c--components--forms-select--box-shadow-color: var(--c--theme--colors--primary-text);
-	--c--components--forms-switch--handle-border-radius: 2px;
-	--c--components--forms-switch--rail-border-radius: 4px;
-	--c--components--forms-switch--accent-color: var(--c--theme--colors--primary-text);
+	--c--components--forms-input--background-color: var(--c--theme--colors--greyscale-100);
+	--c--components--forms-input--border-radius: 0;
+	--c--components--forms-input--border-color: var(--c--theme--colors--greyscale-900);
+	--c--components--forms-input--border-width: 0 0 2px 0;
+	--c--components--forms-input--border-color--focus: #0974F6;
+	--c--components--forms-input--border-color--hover: var(--c--theme--colors--greyscale-900);
+	--c--components--forms-input--label-color--focus: var(--c--components--forms-labelledbox--label-color--small);
+	--c--components--forms-textarea--background-color: var(--c--theme--colors--greyscale-100);
 	--c--components--forms-textarea--border-radius: 0;
+	--c--components--forms-textarea--border-color: var(--c--theme--colors--greyscale-900);
+	--c--components--forms-textarea--border-width: 0 0 2px 0;
+	--c--components--forms-textarea--border-color--focus: #0974F6;
+	--c--components--forms-textarea--border-color--hover: var(--c--theme--colors--greyscale-900);
+	--c--components--forms-textarea--label-color--focus: var(--c--components--forms-labelledbox--label-color--small);
+	--c--components--forms-select--background-color: var(--c--theme--colors--greyscale-100);
+	--c--components--forms-select--border-radius: 0;
+	--c--components--forms-select--border-color: var(--c--theme--colors--greyscale-900);
+	--c--components--forms-select--border-width: 0 0 2px 0;
+	--c--components--forms-select--border-color--focus: #0974F6;
+	--c--components--forms-select--border-color--hover: var(--c--theme--colors--greyscale-900);
+	--c--components--forms-select--label-color--focus: var(--c--components--forms-labelledbox--label-color--big);
+	--c--components--forms-switch--accent-color: #2323ff;
+	--c--components--forms-checkbox--accent-color: #2323ff;
 } .clr-secondary-text { color: var(--c--theme--colors--secondary-text); }
 .clr-secondary-100 { color: var(--c--theme--colors--secondary-100); }
 .clr-secondary-200 { color: var(--c--theme--colors--secondary-200); }
@@ -434,10 +363,6 @@
 .clr-success-text { color: var(--c--theme--colors--success-text); }
 .clr-warning-text { color: var(--c--theme--colors--warning-text); }
 .clr-danger-text { color: var(--c--theme--colors--danger-text); }
-.clr-card-border { color: var(--c--theme--colors--card-border); }
-.clr-primary-bg { color: var(--c--theme--colors--primary-bg); }
-.clr-primary-150 { color: var(--c--theme--colors--primary-150); }
-.clr-info-150 { color: var(--c--theme--colors--info-150); }
 .bg-secondary-text { background-color: var(--c--theme--colors--secondary-text); }
 .bg-secondary-100 { background-color: var(--c--theme--colors--secondary-100); }
 .bg-secondary-200 { background-color: var(--c--theme--colors--secondary-200); }
@@ -508,10 +433,6 @@
 .bg-success-text { background-color: var(--c--theme--colors--success-text); }
 .bg-warning-text { background-color: var(--c--theme--colors--warning-text); }
 .bg-danger-text { background-color: var(--c--theme--colors--danger-text); }
-.bg-card-border { background-color: var(--c--theme--colors--card-border); }
-.bg-primary-bg { background-color: var(--c--theme--colors--primary-bg); }
-.bg-primary-150 { background-color: var(--c--theme--colors--primary-150); }
-.bg-info-150 { background-color: var(--c--theme--colors--info-150); }
 .fw-thin { font-weight: var(--c--theme--font--weights--thin); }
 .fw-light { font-weight: var(--c--theme--font--weights--light); }
 .fw-regular { font-weight: var(--c--theme--font--weights--regular); }
